--- a/Vistas/Properties/Resources.resx
+++ b/Vistas/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="ImgPwd" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ImgPwd.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="person-plus-fill" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\person-plus-fill.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
