Ultimos cambios de gestion de usuarios

--- a/Vistas/FrmLogin.resx
+++ b/Vistas/FrmLogin.resx
@@ -118,26 +118,134 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="lblNombreUsuario.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABkAAAAZCAYAAADE6YVjAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        xAAADsQBlSsOGwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAOVSURBVEhLvVVZ
-        SJRRGP0VG8TSitAeMtCisGgZx7HNStKHfEmKXoIiiCjbUOitxbKyRbM9yV6FqTcJWiCkgiAwkKyGkiCX
-        SZ0URp0ZnVHH5fSfb7z6zziWQXTgOPe/97vf+ZZ7rxr+A/5aZGRkBAMDA+jv74ff79Ppx9DQ0PhqZMxY
-        hM56enrQ3d0t9HjceP+hEY42p4w/f22Cs6tn3DoUfxRRzj0eD3p7e0Po0sXqdCG/rw9v6+xw63Ojo6Pj
-        Oycxrcjw8LA4Hxsbk29HS6v8slxKxOv1iADHA/5+uN3B+XBEFGG9WRLiyMFD0DRtgndu3ZZ5KVFjE97V
-        fxGBF6/r8aP9pwTGQIyYIuJ2u0WAGZw8USiO4+pOYQMeYqX9rHw/tj3SMw3g67cWyUaV7ntzm4xZYiNC
-        RGjASFTKEv2T41jdfhXmllKkd1dgsW0/FsbOk3WPHhBtedp8evYMkPu9Xq+sK0yIsLFKgMbMREQ+lsDa
-        dgVrdRGz/rvi02mZJ5RAZWUl7Ha7HGX6UKVWEOvBwUFZ4CZFwkSRyzuxrPM6LD/LYA3cR0LhFqxfZZF1
-        BsP6l5eXi7DT6RQh+jL2RUQ4qbJQZIRvXr0OZlOQhSUvjyPuYGbQWUeHOGNw6iJWV1fLmsPhQF9fX0hf
-        NKVsFFBkyT42NGDTmgwsiJ6NvK256OrslI3Z2dnBAMIYHx8v69yvoPG4hmfBub9FVVWViLCEbDwDDwQC
-        sqYZG04ys1b94m3L3ITEmDlYaJobwiRTApJmJWBX3g74fD5xUlRUJAL8ZpnoR/kkQkSYQXNTczD1PelI
-        eX4Uqc+OIPVpwST5rc/H5KeJHVFTUyO9UAKKzIZ9CxEhNput0PZakdxehozOMpg79DsSTuc1rMMDaFmL
-        UHj4mOxjiYwCJP3Sv8YUjSLzNRO0h/uwvOkSzK2lcj8iMb2rHInX85Ft2Sj7wgVI+mWPND6E6nQRC6Ji
-        oVUfQJqrAlb3TVh6b0SkNXAPSXd3I8eaJfvCBUiKsAVSVPUcEDHsx7IEaDkpiMpNnZbR25dCSzZhvSVT
-        9kUScLlcwZeDBhxwgk2y2WwoLT6PK8UXdV74LUvOnENtbe2UhiuBiSMsf3XwGeACbzrHM6VRgM5ZepJr
-        ChMiBP+r0ZhG3EAqB9NR2Snn6u4YESKiwAvJPjEzo6CRyilteExZ6ukQUUSBvaIgS8JTwoePZLQsK0/m
-        TPBbkX8D4BdZPWpo9dp1qAAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAAZhklEQVR4Xu3dbZnc1raF0UAw
+        hEAIBEMwhEAwhDAIhEAwhEAIhEAIhHu10u74OJ4d90eVpK053ucZf+49cau6V+1SqSTVD5KW7d3m/We/
+        fPbb5vfP/tj83xvNv/H4782//fhzHn/ubIMkSbpDP20+bOaF99NmXozTi/WRZptm22YbZ1tnmyVJ0jOb
+        F86fN79uzvhC/1LzGOaxzGOyUyBJ0uceD9/PC+Vfm/QieiXzGOexPn6MIElSRT9uPm7mcHl6gWw0v4v5
+        nczvRpKkyzTvdOcw+J+b9ALIF/M7mt+VowOSpCWbE+HmrPmGw/r3Mr+7+R3O71KSpNM2J7l5p38fj0cG
+        nEgoSTpFcx38fH59i2vueZ75Xc/v3D0IJEm7N59Rz+Hp9ALFfuZv4HwBSdLdm+vZvds/n/mbzN9GkqSb
+        NYea57p1n+2f3/yN5m/l4wFJ0qt7fOF3Jv965m9mR0CS9KK88F+HHQFJ0nfzwn9ddgQkSbG5rMwL//XN
+        33j+1pKk8uYuc07u6zN/c3cYlKTC5otnrvB1u7zNzIAvIZKkgh4/508vBvRyfoAkXbi5Y5zD/TxlZsNd
+        BSXpQs07O9+/z3PNrDgaIEmLNyd6Obufl5qZcZKgJC2Yd/3cgqMBkrRQPuvnlpwbIEkL5Ax/7mVmS5J0
+        suYwra/p5d5mxnwkIEknaQ7POtGPvcys+UhAkg5u7uueFmm4Nx8JSNIBzWHY3zZpYYa9zAz6SECSdsrn
+        /ZzJzKLvE5CkO/fTxuf9nM3M5MymJOkO/bzx4s9ZzWzOjEqSbtgsrGnRhbOxEyBJN8rNfViNKwQk6Y05
+        059VzexKkl6RF39WZydAkl6YF3+uwk6AJD0zL/5cjZ0ASfpOXvy5KjsBkvREXvy5OjsBkvSvvPjTwk6A
+        JH3Odf60cZ8ASfW5wx+t3DFQUm1e/GlnJ0BSXb7VD3yLoKSy5rvTvfjDg3kuzHNCki7du80fm7QQQqt5
+        TsxzQ5Ium8v9IHN5oKTL9nGTFj7ggcsDJV2u95u04AFfm+eKJF2i+WzTSX/wPPNccT6ApEv0+yYtdEA2
+        JwVK0tK5zS+8jvMBJC2bz/3hbZwPIGm55jPMPzdpUQOeZ55DzgeQtFSfNmlBA15mnkuStEQfNmkhA15n
+        nlOSdOpc8ge359JASafPoX+4Dx8FSDptzvqH+3JVgKTT5ax/uD9XBUg6XW74A/twgyBJp+nHTVqogPuY
+        55wkHZ57/cO+5jknSYfmmv9zmi+TmReJOVw8ft7MCWTPMf/bx/9u/o35t9LP4FjuDSDp0Jz4d7x5gf51
+        My/cP23u1fzb8zPmZ9kpON489yTpkD5u0sLEfc3C/9tm3gEeeUb4/OzZhtkWO4LHmOegJO3aLP7u+Lef
+        eYGdd973fIf/1mbbZhvtDOzHHQIl7d58PpwWJG5r3l3P5/KrNds8254eE7c1z0VJ2iXv/u9r3kHPon6F
+        d3bzGOaxOCpwP44CSNot7/7vY14k5yS7qzaPzY7AfTgKIOnuefd/e1d/4f93dgRuz1EASXfPu//bmUX7
+        Kof6X9rjRwN2Jm/HUQBJd8u7/9uZr3Z1O9eH34GvkL4NRwEk3S3v/t9uFml3cPu2+Z3YuXw7RwEk3SWf
+        277NvNP1Du3p5nfjaMDbzHNUkm7anLiVFhy+b97ZNp3k99bmd+VowOuZNUk3zb3fX2d+b2e+e99Zm9+Z
+        mXud+b1J0k2axTgtNPw3h/zflo8EXs9Op6Sb5JauLzf3xNdtmt9l+h3ztHnOStKbmndhaYHhaT6DvX3O
+        QXk5R58kvSlf+fsyXvzvl52Al/FVwZLelBOxns+L//2zE/B8TgaU9Oqc/Pd8Xvz3y07A8zkZUNKrcvLV
+        83jx3z87Ac/jZFRJr8qd/77Pi/9x2Qn4PncGlPTi5t7saUHhC++ujs9Rqu/z3ROSXpRr///b3KBG58jN
+        gv6bewJIelHuxf60ObvaNdbnaf4WrlZ52jyXJelZvd+khYSHxdSZ1edr/iZ2Wp82z2lJ+m4+V32ak/7O
+        m5MCn+Z8FUnPytn/mc/9z5/zATJXA0j6bj9u0gLSbg4v+9z//M3fyEcB2Ty3JenJ3Ps/cynVOrmENfPd
+        AJL+M4dQv+XQ/3qZ42+ZY0n/WVo4ms3hZIdO12v+Zj4K+JYkxVz+961fNlqz+dulv2kzlwNKilkwvzZn
+        Tjvxb93mb+eKlq/ZoZUU+32TFo1WrvlfP/cG+No8xyXpm3xm+oXrpq+TowBfzHNckr5qbqWaFoxW3v1f
+        J0cBvuZW1pK+yiL5hXf/18tRgC/s3Er6Kvf//8KJUtfLCa5f+F4ASV/lBMAvnPl/veZvmv7WjZwIKOmr
+        0kLR6LeNrtn8bdPfvJEk/Z0TAL9wo5Tr5kZXXzgRUNLf+fKUB07+u35OBnzgy60k/Z0TpB44Oer6Odn1
+        gRNdJf2db0574LDo9fNx1wPfDCjp71wB4PB/Uz4GcCWApM+lBaKNw/89uRrggaTyXB/9wElRPTnp9YH7
+        XUjluTTqgcWwJzu9D1zyKpVnB+CHH/7YqKv5m6dZaGIHQCrPJYA+/2/M5YAuBZTqswPg29Ea8+2XdgCk
+        +pwR7fr/xtwPwPdeSPW5B4BaS7PQxL0ApPLadwCcANhb+4mAdgCk8iyCas3Or6Tq0sLQxIlQvTkBVlJ1
+        aVFoYgegNzsAkqpLi0ITlwD25lJASdWlRaGJu6H15i6YkqpLi0ITOwC92QGQVF1aFJrYAejNDoCk6tKi
+        0MQOQG92ACTV5naodgCaswMgqbq0KDRRb+82aSaaSCouLQpN1F2aiSaSikuLQhN1l2aiiaTi0qLQRN2l
+        mWgiqbi0KDRRd2kmmkgqLi0KTdRdmokmkopLi0ITdZdmoomk4tKi0ETdpZloIqm4tCg0UXdpJppIKi4t
+        Ck3UXZqJJpKKS4tCE3WXZqKJpOLSotBE3aWZaCKpuLQoNFF3aSaaSCouLQpN1F2aiSaSikuLQhN1l2ai
+        iaTi0qLQRN2lmWgiqbi0KDRRd2kmmkgqLi0KTdRdmokmkopLi0ITdZdmoomk4tKi0ETdpZloIqm4tCg0
+        UXdpJppIKi4tCk3UXZqJJpKKS4tCE3WXZqKJpOLSotBE3aWZaCKpuLQoNFF3aSaaSCouLQpN1F2aiSaS
+        ikuLQhN1l2aiiaTi0qLQRN2lmWgiqbi0KDRRd2kmmkgqLi0KTdRdmokmkopLi0ITdZdmoomk4tKi0ETd
+        pZloIqm4tCg0UXdpJppIKi4tCk3UXZqJJpKKS4tCE3WXZqKJpOLSotBE3aWZaCKpuLQoNFF3aSaaSCou
+        LQpN1F2aiSaSikuLQhN1l2aiiaTi0qLQRN2lmWgiqbi0KDRRd2kmmkgqLi0KTdRdmokmkopLi0ITdZdm
+        oomk4tKi0ETdpZloIqm4tCg0UXdpJppIKi4tCk3UXZqJJpKKS4tCE3WXZqKJpOLSotBE3aWZaCKpuLQo
+        NFF3aSaaSCouLQpN1F2aiSaSikuLQhN1l2aiiaTi0qLQRN2lmWgiqbi0KDRRd2kmmkgqLi0KTdRdmokm
+        kopLi0ITdZdmoomk4tKi0ETdpZloIqm4tCg0UXdpJppIKi4tCk3UXZqJJpKKS4tCE3WXZqKJpOLSotBE
+        3aWZaCKpuLQoNFF3aSaaSCouLQpN1F2aiSaSikuLQhN1l2aiiaTi0qLQRN2lmWgiqbi0KDRRd2kmmkgq
+        Li0KTdRdmokmkopLi0ITdZdmoomk4tKi0ETdpZloIqm4tCg0UXdpJppIKi4tCk3UXZqJJpKKS4tCE3WX
+        ZqKJpOLSotBE3aWZaCKpuLQoNFF3aSaaSCouLQpN1F2aiSaSikuLQhN1l2aiiaTi0qLQRN2lmWgiqbi0
+        KDRRd2kmmkgqLi0KTdRdmokmkopLi0ITdZdmoomk4tKi0ETdpZloIqm4tCg0UXdpJppIKi4tCk3UXZqJ
+        JpKKS4tCE3WXZqKJpOLSotBE3aWZaCKpuLQoNFF3aSaaSCouLQpN1F2aiSaSikuLQhN1l2aiiaTi0qLQ
+        RN2lmWgiqbi0KDRRd2kmmkgqLi0KTdRdmokmkopLi0ITdZdmoomk4tKi0ETdpZloIqm4tCg0UXdpJppI
+        Ki4tCk3UXZqJJpKKS4tCE3WXZqKJpOLSotBE3aWZaCLpQv24eb/5ZfPr5vfP/tqkBQDgf81a8bhuzBoy
+        a8msKbO2SDpRjy/2XuSBe3vcOXjcKZC0Y7MX/nEzT8L0BAXY06xFsyY5QiDdoccX/T826QkIcAazRtkZ
+        kG7Qh82nTXqiAZzZrF2zhkl6Zu82swf95yY9qQBWMmvZrGmztkkKzZNjTqxxIh9wRbO2zRpnR0D6nBd+
+        oIkdAWlrPh9zqB9oNGufcwRU15wh6zI+gIe10FUDqmgOfaUnAUCzWRulSzZ7uK7jB3jarJGOBuhS/bxx
+        kh/A981aOWumtHzzZRppyAF42qyd0pLNJS4O+QO83qyhLhfUUv20cXkfwNvNWjprqnT6ZlB93g9wO7Om
+        2gnQqfPiD3AfdgJ02uas1TS0ANyOKwR0qmavNA0qALfnSIBOkcP+APvycYAOz4s/wDHsBOiw5tpUl/oB
+        HGfWYPcJ0O65yQ/A8WYtlnbL7X0BzsNtg7VLLvcDOB+XB+quzddUOukP4HxmbfZVwrpbPvcHOK/fN9LN
+        +2WTBg6A85i1WrpZc1gpDRoA5+OjAN2sOayUhgyA8/FRgG7Sh00aMADOa9Zu6dW52x/AmtwlUG/KiX8A
+        63JCoF7V7Dm65h9gXbOGOwqgF+fdP8D6HAXQi/LuH+AaHAXQi/LuH+A6Pm6kZ+XMf4DrmDVd+m6u+we4
+        HvcF0Hf7tEnDA8C6Zm2Xnsw9/wGuy3cE6MnmRJE0NACsz8mAejLf9w9wXbPGS9/k8D/A9fkYQN/k8D/A
+        9fkYQN/kO/8Brm/Weumr0qAAcD3SP73fpCEB4HpmzZf+zr3/AXr4hkD9k8//AXo4D0D/5Kt/AXrMmi+5
+        /h+gkPsByAmAAIWcCCgnAAIUciKgfvh1k4YDgOuatV/luQIAoI8rAWQHAKCQHQC5BBCgkEsBFQcDgOtT
+        eWkoALg+lZeGAoDrU3lpKAC4PpWXhgKA61N5aSgAuD6Vl4YCgOtTeWkoALg+lZeGAoDrU3lpKAC4PpWX
+        hgKA61N5aSgAuD6Vl4YCgOtTeWkoALg+lZeGAoDrU3lpKAC4PpWXhgKA61N5aSgAuD6Vl4YCgOtTeWko
+        ALg+lZeGAoDrU3lpKAC4PpWXhgKA61N5aSgAuD6Vl4YCgOtTeWkoALg+lZeGAoDrU3lpKAC4PpWXhgKA
+        61N5aSgAuD6Vl4YCgOtTeWkoALg+lZeGAoDrU3lpKAC4PpWXhgKA61N5aSgAuD6Vl4YCgOtTeWko4Er+
+        2Py2+WXz/jvmfzP/2/lv0r8FV6Ly0lDAyv7azIv4h827zWub/3b+jfm35t9MPwtWpvLSUMCKPm3mBfte
+        zb89PyP9bFiRyktDASuZd+g/bvZqftb8zLQtsBKVl4YCVvD75qfNUc3Pnm1I2wYrUHlpKODM5vP4j5uz
+        NNviHAFWpPLSUMBZzdn5ex7uf26zTa4cYDUqLw0FnNF87v6Ws/rv3WybcwNYicpLQwFnMy+sq2QngFWo
+        vDQUcCY/b1Zrtjk9FjgTlZeGAs5ipXf+/86RAM5O5aWhgDNY+cX/MTsBnJnKS0MBR5sz6s98wt9zm8fg
+        6gDOSuWloYAjzTX1Z7zU77XNY3GfAM5I5aWhgCOd6SY/t2oeU3qscCSVl4YCjjK31r1qbhvM2ai8NBRw
+        lCPv7X/v5rGlxwxHUXlpKOAIVzjr/3u5KoAzUXlpKOAIVzrx76nmMabHDkdQeWkoYG+fNi05F4CzUHlp
+        KGBvHzYtzWNNvwPYm8pLQwF7mmvk23JfAM5A5aWhgD01nPz375wMyBmovDQUsKemw/+P+RiAM1B5aShg
+        T1e45/9Lm8ecfhewJ5WXhgL2Ml+U05ovCeJoKi8NBeyl8fP/x5wHwNFUXhoK2Msvm9bmsaffCexF5aWh
+        gL2837Q2jz39TmAvKi8NBezFDgAcR+WloYC92AGA46i8NBSwFzsAcByVl4YC9jLfkd+aHQCOpvLSUMBe
+        HAGA46i8NBSwFzsAcByVl4YC9tL4PQCP+T4Ajqby0lDAXtwICI6j8tJQwF7cChiOo/LSUMBe/ty0No89
+        /U5gLyovDQXs6cdNW/OY0+8C9qTy0lDAnn7etDWPOf0uYE8qLw0F7OnTpq15zOl3AXtSeWkoYG/vNi3N
+        Y02/A9ibyktDAXv7uGlpHmv6HcDeVF4aCthb09UAzv7nLFReGgo4QsPJgE7+40xUXhoKOELDUQDv/jkT
+        lZeGAo5y5VsDu/UvZ6Py0lDAUf7aXPHGQPOY5rGlxwxHUXlpKOBIv2+u1jym9FjhSCovDQUc7UofBTj0
+        z1mpvDQUcAZXuCrAWf+cmcpLQwFnMJ+Z/7RZtdl2n/tzZiovDQWcxao7AV78WYHKS0MBZ7LaToAXf1ah
+        8tJQwNnMC+qHzdmbz/y9+LMKlZeGAs7qzFcHONuf1ai8NBRwZnNN/ZluFjTb4jp/VqTy0lDA2c1h9jN8
+        hfBsg0P+rErlpaGAVRxd2iZYhcpLQwGrOLq0TbAKlZeGAlZxdGmbYBUqLw0FrOLo0jbBKlReGgpYxdGl
+        bYJVqLw0FLCKo0vbBKtQeWkoYBVHl7YJVqHy0lDAKo4ubROsQuWloYBVHF3aJliFyktDAas4urRNsAqV
+        l4YCVnF0aZtgFSovDQWs4ujSNsEqVF4aCljF0aVtglWovDQUsIqjS9sEq1B5aShgFUeXtglWofLSUMAq
+        ji5tE6xC5aWhgFUcXdomWIXKS0MBqzi6tE2wCpWXhgJWcXRpm2AVKi8NBazi6NI2wSpUXhoKWMXRpW2C
+        Vai8NBSwiqNL2wSrUHlpKGAVR5e2CVah8tJQwCqOLm0TrELlpaGAVRxd2iZYhcpLQwGrOLq0TbAKlZeG
+        AlZxdGmbYBUqLw0FrOLo0jbBKlReGgpYxdGlbYJVqLw0FLCKo0vbBKtQeWkoYBVHl7YJVqHy0lDAKo4u
+        bROsQuWloYBVHF3aJliFyktDAas4urRNsAqVl4YCVnF0aZtgFSovDQWs4ujSNsEqVF4aCljF0aVtglWo
+        vDQUsIqjS9sEq1B5aShgFUeXtglWofLSUMAqji5tE6xC5aWhgFUcXdomWIXKS0MBqzi6tE2wCpWXhgJW
+        cXRpm2AVKi8NBazi6NI2wSpUXhoKWMXRpW2CVai8NBSwiqNL2wSrUHlpKGAVR5e2CVah8tJQwCqOLm0T
+        rELlpaGAVRxd2iZYhcpLQwGrOLq0TbAKlZeGAlZxdGmbYBUqLw0FrOLo0jbBKlReGgpYxdGlbYJVqLw0
+        FLCK95ujmp+dtglWofLSUMAq7ADA66m8NBSwig+bo5qfnbYJVqHy0lDAKn7dHNX87LRNsAqVl4YCVvHH
+        5qjmZ6dtglWovDQUsJIfN3s3PzNtC6xE5aWhgJUc8TGAw/9cgcpLQwEr+WvzbrNX87PmZ6ZtgZWovDQU
+        sJpPm72an5W2AVaj8tJQwIp+3ty7+RnpZ8OKVF4aCljRHJb/aXOv5t926J8rUXlpKGBV99oJ8OLPFam8
+        NBSwsnmhvuXHAfNvefHnilReGgq4gjlZ7y1XB8x/64Q/rkzlpaGAq5h37nPN/ktuFjT/2/lvvOvn6lRe
+        Ggq4orl177ywz5f4zDf5/a/5v83/z+19aaLy0lAAcH0qLw0FANen8tJQAHB9Ki8NBQDXp/LSUABwfSrP
+        pU4AfWbtV3m/b9JwAHBds/arPDsAAH3sAOjvm5+k4QDgumbtV3m/bNJwAHBds/arvLkNahoOAK5r1n6V
+        N198koYDgOt6yRdk6cK5FBCgh0sA9U+uBADo4QoA/ZMTAQF6OAFQ/+REQIAeTgDUV6UhAeB6pK9yHgDA
+        9fn8X9/0cZOGBYDrmLVe+ir3AwC4Ptf/K/bHJg0MAOubNV6K+RgA4Loc/teT+RgA4Loc/td/9mmTBgeA
+        dc3aLv1nHzZpeABY16zt0nf7c5MGCID1zJouPSsnAwJch5P/9OzebXxFMMD6Zi2fNV16dr4hEGB9vvlP
+        L85RAIC1efevV+coAMC6vPvXq5s9R1cEAKxn1m7v/vWm3BcAYD2u+9dNmu+PTgMGwPn4zn/dLN8RALAO
+        9/zXTXNCIMD5OfFPd2m+SzoNHADHc+hfd2sOK7k3AMD5zNrs0L/u2s+bNHwAHMdZ/9qlXzdpAAHY36zJ
+        0m45HwDgeLMWS7vmLoEAx3K3Px3WTxsnBQLsb9beWYOlw7ITALAvL/46TTOIaUgBuD0v/jpVLg8EuK95
+        5z9rrXS6fBwAcB8O++v02QkAuC0v/lqmGVSXCAK83aylXvy1VHNtqpsFAbzerKGu89eyuW0wwMu5va8u
+        0Zy16rwAgO+btdIX++hSzddUzndVp4EH4GGN9JW+umy/bNLgA7Sad/2zNkqXz9EAgAfe9auy+ZzL5YJA
+        o1n7fNav6uYSlzn05SRBoMHj4X6X90mfsyMAXJkXfuk7zZPj48ZHA8AVzFo2a5oXfukFzedjnzbpSQVw
+        ZrN2+YxfemNzhuzsQbu1MHBms0bNWuWsfukOPe4MuIwQOINZi7zoSwf0fjMn1syT0AmEwD3NGjNrzaw5
+        s/ZIOlGzF/64UzBfpjFPVjsHwHM9vsiPWUMeX+y9w79UP/zw/wqEPkMNiiV5AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAALiMAAC4jAXilP3YAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAAB3UlEQVRoQ+3ZPUscURjF8RULsVDwBSIhhWAj0UZE0qoEEoXUIpGoYKWtgtpIPkBQtDIkfgUFCws/
+        QRIUK7uopYqFIqjg6//AChaPi3N3d54huQd+sOzs3HuGYe/M7OZiYmJiYkgDhvEd63nL+fe0LfOpxzyu
+        cP8MbfuGOmQy7diDVd7yF23IVJpxDKtwISdoQSZSiR1YRV9iCxrDPWOwCiYxAvdswyqXxB+45g3uYJVL
+        QmO8hlvewyoWohduGYRVKoTGcksfrFIhPsAtb2GVCtEK1yS5mj9nH+75CqtcEnNwTy1Cbk8eHaIGmYiW
+        4WtYRQvRPq7LrhUtn5ewClsuMIBMpgu/YRV/6hc6kelUoB8/sYvzPL3+AV179JmYmP8pVXiHCSxgDfpC
+        61lFz+ai13pvFfrMOLSP9nWNCgxBpbWUWqvTS2hfHdxnpHpQ1ZjFEaxixdCYM9AcZU0PDmCVKCXdRHaj
+        LJnCLayJy0FzTaKkmYY1WRo0d0nyETewJkmDzswnFJUmnMGaIE2neIXgLMIa2IOuPUFpRKFf1dOmLkF/
+        SYzCGtDTFyTOCqzBPOnRIHE2YA3mSZ0SR0dvDeYp6Ix0oJibwVJTF3UKiv5OW8KmM3VQl5iYmJh/Irnc
+        A/Xm8yPBiWQEAAAAAElFTkSuQmCC
 </value>
   </data>
 </root>
